<resources>
    <string name="app_name">dots_n_boxes</string>
    <string name="heading">DOTS\t N\t BOXES</string>
    <string name="rows">ROWS :</string>
    <string name="columns">COLUMNS :</string>
    <string name="start">Start New Game</string>
    <string name="end">END\nGAME</string>
    <string name="loop">New Game</string>
    <string name="Player1">Player 1: </string>
    <string name="Player2">Player 2: </string>
    <string name="Player3">Player 3:</string>
    <string name="Player4">Player 4:</string>
    <string name="Player5">Player 5:</string>
    <string name="playNum">No. of Players:</string>
    <string name="grid">Open Grid</string>
    <string name="undo">UNDO</string>

</resources>
