<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c19a6b"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/heading"
        android:typeface="monospace"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textColor="#bb4400"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rowInsert"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter Rows"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#663300"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/columnInsert"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter Columns"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#663300"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/rows"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Heading"
        app:layout_constraintTop_toBottomOf="@+id/Heading" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/columns"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Heading"
        app:layout_constraintTop_toBottomOf="@+id/rowInsert" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/start"
        android:background="#664400"
        android:textColor="#FFFF00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="200dp"
        android:text="@string/Player1"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/Heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Heading" />

    <EditText
        android:id="@+id/p1insert"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Enter Name"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="13sp"
        android:inputType="textPersonName"
        android:textColor="#00FF88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/Player2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p1insert" />

    <EditText
        android:id="@+id/p2insert"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="13sp"
        android:hint="Enter Name"
        android:textColor="#FFFF00"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="124dp"
        android:layout_height="127dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Heading"
        app:srcCompat="@drawable/icon" />


</androidx.constraintlayout.widget.ConstraintLayout>